# atomizer

./: .gitignore  Cargo.toml  README.md  artifacts.json  atomizer-installer.ps1.txt  atomizer-installer.sh.txt  changelog.rss  index.html  oranda.json
.github/workflows/: release.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
scripts/: generate_readme.sh
src/: config.rs  error.rs  feed.rs  lib.rs  main.rs
wix/: main.wxs
